--- a/objectdetect/notebooks/speed_up_cost.ipynb
+++ b/objectdetect/notebooks/speed_up_cost.ipynb
@@ -9,37 +9,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "# from bnr_ml.utils.helpers import meshgrid2D\n",
+    "from bnr_ml.utils.helpers import meshgrid2D\n",
     "import theano\n",
     "from theano import tensor as T\n",
-    "from time import time"
+    "from time import time\n",
+    "\n",
+    "import pdb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def meshgrid2D(arr1, arr2):\n",
-    "    arr1 = arr1.dimshuffle('x',0)\n",
-    "    arr2 = arr2.dimshuffle(0,'x')\n",
-    "    arr1, arr2 = T.repeat(arr1, arr2.shape[0], axis=0), T.repeat(arr2, arr1.shape[1], axis=1)\n",
-    "    return arr1, arr2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -52,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "N = 10\n",
+    "N = 2\n",
     "y_pred= np.random.rand(N,5 * B + C,S[0], S[1]).astype(theano.config.floatX)\n",
     "# y_truth = np.random.rand(N,4 + C).astype(theano.config.floatX)\n",
     "y_truth = np.concatenate(\n",
@@ -549,67 +536,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "output = T.tensor4('output')\n",
-    "truth = T.matrix('truth')\n",
-    "lmbda_coord = T.scalar('lambda_coord')\n",
-    "lmbda_noobj = T.scalar('lambda_noobj')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 466,
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cost = get_cost(output, truth, S, B, C)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cost_fn = theano.function([output,truth], cost)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 207,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(38624.9765625, dtype=float32)"
-      ]
-     },
-     "execution_count": 207,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cost_fn(y_pred, y_truth)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {
-    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -621,28 +550,29 @@
     "    offset_x, offset_y = meshgrid2D(T.arange(0,1,block_height), T.arange(0,1,block_width))\n",
     "    \n",
     "    # get indices for x,y,w,h,object-ness for easy access\n",
-    "    x_idx, y_idx = T.arange(0,5*B,5), T.arange(1,5*B+ 1, 5)\n",
-    "    w_idx, h_idx = T.arange(2,5*B+2,5), T.arange(3,5*B+3,5)\n",
+    "    x_idx, y_idx = T.arange(0,5*B,5), T.arange(1,5*B, 5)\n",
+    "    w_idx, h_idx = T.arange(2,5*B,5), T.arange(3,5*B,5)\n",
     "    conf_idx = T.arange(4,5*B+4,5)\n",
     "    \n",
     "    # Get position predictions with offsets.\n",
-    "    pred = T.set_subtensor(output[:,x_idx,:,:],output[:,x_idx,:,:] + offset_x)\n",
-    "    pred = T.set_subtensor(output[:,y_idx,:,:],output[:,y_idx,:,:] + offset_y)\n",
+    "    pred_x = output[:,x_idx] + offset_x.dimshuffle('x','x',0,1)\n",
+    "    pred_y = output[:,y_idx] + offset_y.dimshuffle('x','x',0,1)\n",
+    "    pred_w, pred_h, pred_conf = output[:,w_idx], output[:,h_idx], output[:,conf_idx]\n",
     "    \n",
     "    # Get intersection region bounding box coordinates\n",
-    "    xi = T.maximum(pred[:,x_idx,:,:], truth[:,0].dimshuffle(0,'x','x','x'))\n",
-    "    xf = T.minimum(pred[:,x_idx,:,:] + pred[:,w_idx,:,:], (truth[:,0] + truth[:,2]).dimshuffle(0,'x','x','x'))\n",
-    "    yi = T.maximum(pred[:,y_idx,:,:], truth[:,1].dimshuffle(0,'x','x','x'))\n",
-    "    yf = T.minimum(pred[:,y_idx,:,:] + pred[:,h_idx,:,:], (truth[:,1] + truth[:,3]).dimshuffle(0,'x','x','x'))\n",
+    "    xi = T.maximum(pred_x, truth[:,0].dimshuffle(0,'x','x','x'))\n",
+    "    xf = T.minimum(pred_x + pred_w, (truth[:,0] + truth[:,2]).dimshuffle(0,'x','x','x'))\n",
+    "    yi = T.maximum(pred_y, truth[:,1].dimshuffle(0,'x','x','x'))\n",
+    "    yf = T.minimum(pred_y + pred_h, (truth[:,1] + truth[:,3]).dimshuffle(0,'x','x','x'))\n",
     "    \n",
     "    # Calculate iou score for predicted boxes and truth\n",
     "    isec = (xf - xi) * (yf - yi)\n",
-    "    union = (pred[:,w_idx] * pred[:,h_idx]) + (truth[:,2] * truth[:,3]).dimshuffle(0,'x','x','x') - isec\n",
+    "    union = (pred_w * pred_h) + (truth[:,2] * truth[:,3]).dimshuffle(0,'x','x','x') - isec\n",
     "    iou = T.maximum(isec/union, 0.)\n",
-    "    \n",
+    "\n",
     "    # Get index matrix representing max along the 1st dimension for the iou score (reps 'responsible' box).\n",
-    "    maxval_idx, a = meshgrid2D(T.arange(B), T.arange(pred.shape[0]))\n",
-    "    maxval_idx = maxval_idx.reshape((pred.shape[0],-1))\n",
+    "    maxval_idx, a = meshgrid2D(T.arange(B), T.arange(truth.shape[0]))\n",
+    "    maxval_idx = maxval_idx.reshape((truth.shape[0],-1))\n",
     "    maxval_idx = maxval_idx.dimshuffle(0,1,'x','x')\n",
     "    maxval_idx = T.repeat(T.repeat(maxval_idx,S[0],2),S[1],3)\n",
     "    is_max = T.eq(maxval_idx, iou.argmax(axis=1).dimshuffle(0,'x',1,2))\n",
@@ -656,7 +586,9 @@
     "    xf = T.minimum(offset_x + width, (truth[:,0] + truth[:,2]).dimshuffle(0,'x','x'))\n",
     "    yi = T.maximum(offset_y, truth[:,1].dimshuffle(0,'x','x'))\n",
     "    yf = T.minimum(offset_y + height, (truth[:,1] + truth[:,3]).dimshuffle(0,'x','x'))\n",
-    " \n",
+    "\n",
+    "    pdb.set_trace()\n",
+    "\n",
     "    # Calculate iou score for the cell.\n",
     "    isec = (xf - xi) * (yf - yi)\n",
     "    union = width * height + (truth[:,2] * truth[:,3]).dimshuffle(0,'x','x') - isec\n",
@@ -675,31 +607,122 @@
     "    clspred_truth = T.repeat(T.repeat(truth[:,-C:].dimshuffle(0,1,'x','x'), S[0], axis=2), S[1], axis=3)\n",
     "    \n",
     "    # calculate cost\n",
-    "    cost = lmbda_coord * T.sum((pred[:,conf_idx,:,:][isbox_andcell.nonzero()] - iou[isbox_andcell.nonzero()])**2) + \\\n",
-    "        lmbda_noobj * T.sum((pred[:,conf_idx,:,:][T.bitwise_not(isbox_andcell.nonzero())])**2) + \\\n",
-    "        T.sum((pred[:,x_idx,:,:][is_max.nonzero()].reshape((truth.shape[0],-1)) - truth[:,[0]])**2) + \\\n",
-    "        T.sum((pred[:,y_idx,:,:][is_max.nonzero()].reshape((truth.shape[0],-1)) - truth[:,[1]])**2) + \\\n",
-    "        T.sum((pred[:,w_idx,:,:][is_max.nonzero()].reshape((truth.shape[0],-1)).sqrt() - truth[:,[2]].sqrt())**2) + \\\n",
-    "        T.sum((pred[:,h_idx,:,:][is_max.nonzero()].reshape((truth.shape[0],-1)).sqrt() - truth[:,[3]].sqrt())**2) + \\\n",
-    "        T.sum((pred[:,-C:,:,:][is_inter.nonzero()] - clspred_truth[is_inter.nonzero()])**2)\n",
+    "#     pdb.set_trace()\n",
+    "    cost = lmbda_coord * T.sum((pred_conf - iou)[isbox_andcell.nonzero()]**2) + \\\n",
+    "        lmbda_noobj * T.sum((pred_conf[T.bitwise_not(isbox_andcell).nonzero()])**2) + \\\n",
+    "        T.sum((pred_x[is_max.nonzero()].reshape((truth.shape[0],-1)) - truth[:,[0]])**2) + \\\n",
+    "        T.sum((pred_y[is_max.nonzero()].reshape((truth.shape[0],-1)) - truth[:,[1]])**2) + \\\n",
+    "        T.sum((pred_w[is_max.nonzero()].reshape((truth.shape[0],-1)).sqrt() - truth[:,[2]].sqrt())**2) + \\\n",
+    "        T.sum((pred_h[is_max.nonzero()].reshape((truth.shape[0],-1)).sqrt() - truth[:,[3]].sqrt())**2) + \\\n",
+    "        T.sum((output[:,-C:][is_inter.nonzero()] - clspred_truth[is_inter.nonzero()])**2)\n",
     "    \n",
     "    return cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 459,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "output = T.tensor4('output')\n",
+    "truth = T.matrix('truth')\n",
+    "lmbda_coord = T.scalar('lambda_coord')\n",
+    "lmbda_noobj = T.scalar('lambda_noobj')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 467,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "output = T.as_tensor(y_pred)\n",
+    "truth = T.as_tensor(y_truth)\n",
+    "lmbda_coord = T.as_tensor_variable(5.)\n",
+    "lmbda_noobj = T.as_tensor_variable(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> <ipython-input-466-f4d4ffc7a3c8>(49)get_cost()\n",
+      "-> isec = (xf - xi) * (yf - yi)\n",
+      "(Pdb) offset_x.eval()\n",
+      "array([[ 0.        ,  0.14285715,  0.2857143 ,  0.42857146,  0.5714286 ,\n",
+      "         0.71428573,  0.85714293],\n",
+      "       [ 0.        ,  0.14285715,  0.2857143 ,  0.42857146,  0.5714286 ,\n",
+      "         0.71428573,  0.85714293],\n",
+      "       [ 0.        ,  0.14285715,  0.2857143 ,  0.42857146,  0.5714286 ,\n",
+      "         0.71428573,  0.85714293],\n",
+      "       [ 0.        ,  0.14285715,  0.2857143 ,  0.42857146,  0.5714286 ,\n",
+      "         0.71428573,  0.85714293],\n",
+      "       [ 0.        ,  0.14285715,  0.2857143 ,  0.42857146,  0.5714286 ,\n",
+      "         0.71428573,  0.85714293],\n",
+      "       [ 0.        ,  0.14285715,  0.2857143 ,  0.42857146,  0.5714286 ,\n",
+      "         0.71428573,  0.85714293],\n",
+      "       [ 0.        ,  0.14285715,  0.2857143 ,  0.42857146,  0.5714286 ,\n",
+      "         0.71428573,  0.85714293]], dtype=float32)\n",
+      "(Pdb) offset_x.shape.eval()\n",
+      "array([7, 7])\n",
+      "(Pdb) truth[0,0].eval()\n",
+      "array(0.23623690009117126, dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cost = get_cost(output, truth, S, B, C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "cost_fn = theano.function([], cost)"
+    "# cost_fn = theano.function([output,truth], cost)\n",
+    "cost_fn = theano.function([output, truth], cost)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 461,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "grad = T.grad(cost, output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "grad_fn = theano.function([output, truth], grad, on_unused_input='ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 465,
    "metadata": {
     "collapsed": false
    },
@@ -707,16 +730,16 @@
     {
      "data": {
       "text/plain": [
-       "array(271.6685485839844, dtype=float32)"
+       "(2, 25, 7, 7)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 465,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cost_fn()"
+    "grad_fn(y_pred, y_truth).shape"
    ]
   },
   {
