--- a/tests/objectdetect/yolo/notebooks/test_cost_optim.ipynb
+++ b/tests/objectdetect/yolo/notebooks/test_cost_optim.ipynb
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1083,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1084,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1085,
    "metadata": {
     "collapsed": true
    },
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 891,
+   "execution_count": 1098,
    "metadata": {
     "collapsed": true
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 892,
+   "execution_count": 1099,
    "metadata": {
     "collapsed": false
    },
@@ -392,10 +392,10 @@
     {
      "data": {
       "text/plain": [
-       "array(18643.83203125, dtype=float32)"
+       "array(401.6466979980469, dtype=float32)"
       ]
      },
-     "execution_count": 892,
+     "execution_count": 1099,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,22 +406,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1072,
+   "execution_count": 1100,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot slice a 0-d array",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1072-b42d496dd43a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmanual_cost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtruth\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mS\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-1071-44d8d801e245>\u001b[0m in \u001b[0;36mmanual_cost\u001b[0;34m(output, truth, C, S, B, lmbda_coord, lmbda_noobj, thresh)\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0miou_score_per_box\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                 \u001b[0mreg_truth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtruth\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m                 \u001b[0mreg_box\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m5\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                 \u001b[0mreg_box\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mj\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mxshift\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot slice a 0-d array"
-     ]
+     "data": {
+      "text/plain": [
+       "397.55323884495863"
+      ]
+     },
+     "execution_count": 1100,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -430,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1058,
+   "execution_count": 1122,
    "metadata": {
     "collapsed": false
    },
@@ -449,18 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1059,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fn2(true_column, truth.get_value())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1073,
+   "execution_count": 1123,
    "metadata": {
     "collapsed": false
    },
@@ -468,33 +455,21 @@
     {
      "data": {
       "text/plain": [
-       "1.5974433330725489e-29"
+       "array(1.4151879668133915e-10, dtype=float32)"
       ]
      },
-     "execution_count": 1073,
+     "execution_count": 1123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "manual_cost(true_column[0], truth.get_value()[0], C, S, B)"
+    "fn2(true_column, truth)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1061,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "art_output = theano.shared(true_column)\n",
-    "truth = theano.shared(truth)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1062,
+   "execution_count": 1124,
    "metadata": {
     "collapsed": false
    },
@@ -502,16 +477,16 @@
     {
      "data": {
       "text/plain": [
-       "array(1518.5102315674687)"
+       "0.0"
       ]
      },
-     "execution_count": 1062,
+     "execution_count": 1124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_cost_optim(yl, art_output, truth, S, B, C).eval()"
+    "manual_cost(true_column[0], truth[0], C, S, B)"
    ]
   },
   {
