--- a/tests/objectdetect/yolo/notebooks/train_yolo_net.ipynb
+++ b/tests/objectdetect/yolo/notebooks/train_yolo_net.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 112,
    "metadata": {
     "collapsed": false
    },
@@ -488,10 +488,10 @@
     {
      "data": {
       "text/plain": [
-       "<module 'bnr_ml.objectdetect.yolo' from '/usr/local/python/bnr_ml/objectdetect/yolo.pyc'>"
+       "<module 'bnr_ml.objectdetect.yolo' from '/usr/local/python/bnr_ml/objectdetect/yolo.py'>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 115,
    "metadata": {
     "collapsed": true
    },
@@ -536,7 +536,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "out_fn = theano.function([yl.input], yl.output, allow_input_downcast=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -544,16 +555,49 @@
     {
      "data": {
       "text/plain": [
-       "array(42642792.0, dtype=float32)"
+       "array(48559.640625, dtype=float32)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fn(100 * np.random.randn(100,3,200,200), np.random.rand(100,4 + C))"
+    "fn(np.random.rand(100,3,200,200), np.random.rand(100,4 + C))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tmp = out_fn(100 * np.random.randn(10,3,200,200))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0073986"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(tmp[:,[0,],:,:]).mean()"
    ]
   },
   {
