--- a/tests/objectdetect/yolo/notebooks/test_cost_optim.ipynb
+++ b/tests/objectdetect/yolo/notebooks/test_cost_optim.ipynb
@@ -20,9 +20,7 @@
      "text": [
       "/Users/colingaudreau/anaconda2/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
       "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
-      "ERROR (theano.sandbox.cuda): ERROR: Not using GPU. Initialisation of device gpu failed:\n",
-      "initCnmem: cnmemInit call failed! Reason=CNMEM_STATUS_OUT_OF_MEMORY. numdev=1\n",
-      "\n",
+      "Using gpu device 0: GeForce GTX 960 (CNMeM is enabled with initial size: 80.0% of memory, cuDNN not available)\n",
       "/Library/Python/2.7/site-packages/theano/tensor/signal/downsample.py:6: UserWarning: downsample module has been moved to the theano.tensor.signal.pool module.\n",
       "  \"downsample module has been moved to the theano.tensor.signal.pool module.\")\n"
      ]
@@ -55,18 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'bnr_ml.objectdetect.yolo' from '/usr/local/python/bnr_ml/objectdetect/yolo.pyc'>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "reload(yolo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -194,35 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def ismax(tensor, axis=1, dims):\n",
-    "    ismax_idx, _ = meshgrid2D(T.arange(tensor.shape[axis]), T.arange(tensor.shape[axis]))\n",
-    "    ismax_idx = ismax_idx.dimshuffle()\n",
-    "    \n",
-    "    \n",
-    "    maxval_idx, _ = meshgrid2D(T.arange(B), T.arange(truth.shape[0]))\n",
-    "    maxval_idx = maxval_idx.dimshuffle(0,'x',1,'x','x')\n",
-    "    maxval_idx = T.repeat(T.repeat(maxval_idx,S[0],3),S[1],4)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def _get_cost_optim(self, output, truth, S, B, C,lmbda_coord=5., lmbda_noobj=0.5, iou_thresh=0.05):\n",
+    "def _get_cost_optim_multi(self, output, truth, S, B, C,lmbda_coord=5., lmbda_noobj=0.5, iou_thresh=0.05):\n",
     "    '''\n",
     "    Calculates cost for multiple objects in a scene without for loops or scan (so reduces the amount of variable\n",
     "    created in the theano computation graph).  A cell is associated with a certain object if the iou of that cell\n",
-    "    and the object is h\n",
+    "    and the object is higher than any other ground truth object. and the rest of the objectness scores are pushed\n",
+    "    towards zero.\n",
     "    '''\n",
     "    \n",
     "    # calculate height/width of individual cell\n",
@@ -303,7 +295,11 @@
     "    cell_intersects = (iou_cell > iou_thresh)\n",
     "        \n",
     "    obj_in_cell_and_resp = T.bitwise_and(T.bitwise_and(cell_intersects, box_is_resp), obj_for_cell)\n",
-    "    not_cell = T.eq(T.sum(obj_in_cell_and_resp, axis=1, keepdims=True), 0)\n",
+    "    conf_is_zero = T.bitwise_and(\n",
+    "        bitwise_not(T.bitwise_and(cell_intersects, box_is_resp)),\n",
+    "        obj_for_cell\n",
+    "    )\n",
+    "    conf_is_zero = conf_is_zero.sum(axis=1, keepdims=True)\n",
     "    \n",
     "    # repeat \"cell overlaps\" logical matrix for the number of classes.\n",
     "    pred_class = T.repeat(pred_class, truth.shape[1] // (4 + C), axis=1)\n",
@@ -313,7 +309,7 @@
     "\n",
     "    # calculate cost\n",
     "    cost = T.sum((pred_conf - iou)[obj_in_cell_and_resp.nonzero()]**2) + \\\n",
-    "        lmbda_noobj * T.sum((pred_conf[not_cell.nonzero()])**2) + \\\n",
+    "        lmbda_noobj * T.sum((pred_conf[conf_is_zero.nonzero()])**2) + \\\n",
     "        lmbda_coord * T.sum((pred_x - truth_x.dimshuffle(0,1,'x','x','x'))[obj_in_cell_and_resp.nonzero()]**2) + \\\n",
     "        lmbda_coord * T.sum((pred_y - truth_y.dimshuffle(0,1,'x','x','x'))[obj_in_cell_and_resp.nonzero()]**2) + \\\n",
     "        lmbda_coord * T.sum((pred_w.sqrt() - truth_w.dimshuffle(0,1,'x','x','x').sqrt())[obj_in_cell_and_resp.nonzero()]**2) + \\\n",
@@ -325,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -338,19 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "truth = np.asarray([[0.,0.,0.5,0.5, 1.,0.,   .6,.6,.3,.3,0.,1.,     -10.,-10.,0.1,0.1, 1.,0.,  \\\n",
-    "                     -10.,-10.,0.1,0.1, 1.,0.,    -10.,-10.,0.1,0.1, 1.,0.,     -10.,-10.,0.1,0.1, 1.,0.,    -10.,-10.,0.1,0.1, 1.,0.]])"
+    "                     -10.,-10.,0.1,0.1, 1.,0.,    -10.,-10.,0.1,0.1, 1.,0.,    -10.,-10.,0.1,0.1, 1.,0.]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -363,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -404,7 +400,7 @@
    },
    "outputs": [],
    "source": [
-    "cost = _get_cost_optim(None, X,y,S,B,C)"
+    "cost = _get_cost_optim_multi(None, X,y,S,B,C)"
    ]
   },
   {
